package models;

public abstract class CharacterFactory {
    public static ACharacter createCharacter(Element type){
        return null;
    }
}
