package models;

public enum Element {
    FIRE,
    WATER,
    GROUND,
    AIR
}
