package models;

public class Tower {
    public Tower(){}
}
